# research-os

./: .gitignore  README.md  monitor.py  pyproject.toml
design_docs/: execution_workspace_plan.md  experiment_engine.md  literature_review.md  mastermind_controller.md  promotion_and_safeguards.md  research_state.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: ConfidenceGauge.tsx  EmptyState.tsx  ErrorMessage.tsx  KindBadge.tsx  Loading.tsx  MarkdownRenderer.tsx  PaperChip.tsx  RelevanceBadge.tsx  SourceIcon.tsx  StatCard.tsx  StatusBadge.tsx
frontend/src/pages/: Dashboard.tsx  ReviewWorkspace.tsx
frontend/src/pages/tabs/: ActivityTab.tsx  CoverageTab.tsx  NotesTab.tsx  PapersTab.tsx  ReportTab.tsx  ResourcesTab.tsx
scripts/: steering_hook.sh
src/research_os/: __init__.py  cli.py  config.py  launcher.py  tool_cli.py  types.py
src/research_os/agent/: loop.py  tools.py
src/research_os/api/: app.py  routes.py
src/research_os/providers/: __init__.py  anthropic_api.py  base.py  claude_cli.py
src/research_os/sources/: arxiv.py  cache.py  openalex.py  semantic_scholar.py  web_search.py
src/research_os/sources/paper_text/: __init__.py  arxiv.py  cleaning.py  doi.py  html.py  http.py  latex.py  pdf.py  scoring.py
src/research_os/store/: __init__.py  db.py  models.py  store.py
tests/: test_lit_review_smoke.py
