[project]
name = "research-os"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "click>=8.1",
    "duckduckgo_search>=7.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
research-os = "research_os.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
